# playground

./: .gitignore  build.sbt  riemann.py
agda/: .gitignore  AgdaBasics.agda  Coind.agda  DTPin.agda  Ind.agda  NBE.agda  split_combine.agda  stlc_deno.agda  stlc_op.agda
ats/: fib.dats  hello_dats.c  mergesort.dats
code/: README.md  build.sbt
coq/: .gitignore  Cantor.v  FixpointsWalkthrough.v  HoareState.v  Later.v  Peirce.v  cpdt.tgz
coq/SN/: MyNorm.v  (+1 more)
cuda/: vector_add.c  vector_add.cu
deeplearning/: mps.py
dependent/: dtlc.rkt  stlc.rkt  untyped.rkt
haskell/: Floyd.hs  graph.txt
haskell/scheduler/: scheduler.cabal  scheduler.hs  stack.yml
hol/: Script.sml
lean/: BST.lean  deBruijn.lean  hello.lean  regular.lean
lean3/: ch2.lean  ch3.lean  test.lean
ml/: 99-ocaml.ml  Hungry.ml  dyck.sml  fact.sml  lazy.sml  monadic-reflection.sml  monadic.sml  sort.sml
quantum/: circuit_eval.py  cirq_perf.py  cps_quantum.py  qsim_test.py  simon.py
rust/: bad.rs  closure.rs
scala2/: build.sbt
scala3/: build.sbt
scheme/: ad.rkt  amb-nqueens.rkt  amb.rkt  amr.rkt  anf.rkt  cesk.rkt  church_encoding.rkt  closure.rkt  contract.rkt  cpcf-den.rkt  cpcf-interp.rkt  cps-conversion.rkt  cps-convert.rkt  delimited_cont.rkt  dera.rkt  dynamic.rkt  gamble-test.rkt  intro_delimited_cont.rkt  mini-datalog.rkt  mk-sudoku.rkt  monads.rkt  nd.rkt  oplss17.rkt  propositional-logic.rkt  quantum.rkt  rbtree.rkt  regex-cps.rkt  regexp.rkt  reset-shift-desugar.rkt  sort.rkt
smt/: max_example.py
tce/: evenodd.c  evenodd.scm  evenodd_baker.c  evenodd_ext.c  evenodd_single.c  (+1 more)
(+495 files in other folders)
