name:                scheduler
version:             0.1.0.0
license:             BSD3
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
copyright:           2017 Ömer Sinan Ağacan
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scheduler
  main-is:             Main.hs

  build-depends:
      base >= 4.7 && < 5,
      bytestring,
      containers,
      fast-logger,
      hedgehog,
      lifted-async,
      lifted-base,
      monad-control,
      monad-logger,
      text,
      typed-duration

  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -rtsopts
